postmant collection and api with authorize onendpoint for authentication/auth AD

--- a/AZ_AD_graph_api/appsettings.json
+++ b/AZ_AD_graph_api/appsettings.json
@@ -7,9 +7,9 @@
   },
   "AllowedHosts": "*",
   "AppDetail": {
-    "TenantId": "819a8625-9fb0-44ff-b7bc-50da330ca0b1",
-    "ClientId": "a499bef8-038e-400c-8160-2be4d108c32f",
-    "ClientSecret": "5pr8Q~QETrlsWMI.aCMRqeoqkqiiGu6j~Eo4JdtM",
-    "ObjectIdApp": "15216253-b588-4cd1-a2f3-d89f007c1f4c"
+    "TenantId": "819a8625-0000000-44ff-b7bc-0000000",
+    "ClientId": "a499bef8-0000000-400c-8160-0000000",
+    "ClientSecret": "5pr8Q~0000000.aCMRqeoqkqiiGu6j~0000000",
+    "ObjectIdApp": "15216253-0000000-4cd1-a2f3-0000000"
   }
 }
