--- a/AZ_AD_graph_api/appsettings.json
+++ b/AZ_AD_graph_api/appsettings.json
@@ -7,9 +7,9 @@
   },
   "AllowedHosts": "*",
   "AppDetail": {
-    "TenantId": "819a8625-0000000-44ff-b7bc-0000000",
-    "ClientId": "a499bef8-0000000-400c-8160-0000000",
-    "ClientSecret": "5pr8Q~0000000.aCMRqeoqkqiiGu6j~0000000",
-    "ObjectIdApp": "15216253-0000000-4cd1-a2f3-0000000"
+    "TenantId": "819a8625-9fb0-44ff-b7bc-50da330ca0b1",
+    "ClientId": "1ad8b8ce-1973-4eb5-8606-f84c94552414",
+    "ClientSecret": "Ff-8Q~VCX0QFjw1xTQKnkDJeE2LxP8dshgXkfccK",
+    "ObjectIdApp": "72c4d9d8-9eea-4a1e-9447-9297f767cb6d"
   }
 }
