Get App Roles http://localhost:5219/UserManagerGraphAPI/getapproles

--- a/AZ_AD_graph_api/appsettings.json
+++ b/AZ_AD_graph_api/appsettings.json
@@ -8,8 +8,8 @@
   "AllowedHosts": "*",
   "AppDetail": {
     "TenantId": "819a8625-9fb0-44ff-b7bc-50da330ca0b1",
-    "ClientId": "1ad8b8ce-1973-4eb5-8606-f84c94552414",
-    "ClientSecret": "Ff-8Q~VCX0QFjw1xTQKnkDJeE2LxP8dshgXkfccK",
-    "ObjectIdApp": "72c4d9d8-9eea-4a1e-9447-9297f767cb6d"
+    "ClientId": "e001d5bd-f298-4f80-aba6-6deb3f5c4f4a",
+    "ClientSecret": "I1c8Q~VOnueufDhM.vCchhWQ5dBsDRbfqARTBbhH",
+    "ObjectIdApp": "da099f60-6b9b-4be1-97eb-8ab050ee0d80"
   }
 }
