--- a/Messaging/Messaging.csproj
+++ b/Messaging/Messaging.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.12.0" />
+    <PackageReference Include="Azure.Storage.Queues" Version="12.12.0" />
   </ItemGroup>
 
 </Project>
