--- a/AZ_AD_graph_api/AZ_AD_graph_api.csproj
+++ b/AZ_AD_graph_api/AZ_AD_graph_api.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.AspNet.WebApi.Core.es" Version="5.2.9" />
     <PackageReference Include="Microsoft.Graph" Version="4.50.0" />
     <PackageReference Include="Microsoft.Identity.Client" Version="4.49.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0" />
   </ItemGroup>
 
