event hub send and recieve

--- a/consoleapp_sendmessage_to_event_hub/consoleapp_sendmessage_to_event_hub.csproj
+++ b/consoleapp_sendmessage_to_event_hub/consoleapp_sendmessage_to_event_hub.csproj
@@ -8,7 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Azure.Messaging.EventGrid" Version="4.13.0" />
+    <PackageReference Include="Azure.Messaging.EventHubs" Version="5.7.5" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
   </ItemGroup>
 
 </Project>
