--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,7 +7,8 @@ trigger:
 - master
 
 pool:
-  vmImage: 'windows-latest'
+  name: Local
+  # vmImage: 'windows-latest'
 
 variables:
   solution: '**/*.sln'
