set connection type

--- a/AZ_AD_graph_api/AZ_AD_graph_api.csproj
+++ b/AZ_AD_graph_api/AZ_AD_graph_api.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ClassLibrary1\ClassLibrary1.csproj" />
+  </ItemGroup>
+
 </Project>
